--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:pull": "cd database && npx prisma db pull",
+    "db:push": "cd database && npx prisma db push",
+    "db:gen": "cd database && npx prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "^5.18.0",
     "@twind/core": "^1.1.3",
     "@twind/preset-autoprefix": "^1.0.7",
     "@twind/preset-tailwind": "^1.1.4",
     "next": "14.2.5",
+    "prisma": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2"
