--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "cd database && npx prisma generate && cd .. && next build",
     "start": "next start",
     "lint": "next lint",
     "db:pull": "cd database && npx prisma db pull",
