--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "db-try": "next build",
     "build": "cd database && npx prisma generate && cd .. && next build",
     "start": "next start",
     "lint": "next lint",
     "db:pull": "cd database && npx prisma db pull",
     "db:push": "cd database && npx prisma db push",
-    "db:gen": "cd database && npx prisma generate"
+    "db:gen": "cd database && npx prisma generate",
+    "db:studio": "cd database && npx prisma studio"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -23,6 +25,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-select": "^5.8.0",
     "tailwind-merge": "^2.5.2",
     "zod": "^3.23.8"
   },
