--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@twind/preset-autoprefix": "^1.0.7",
     "@twind/preset-tailwind": "^1.1.4",
     "next": "14.2.5",
+    "next-safe-action": "^7.7.1",
     "prisma": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
