--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@twind/core": "^1.1.3",
     "@twind/preset-autoprefix": "^1.0.7",
     "@twind/preset-tailwind": "^1.1.4",
+    "date-fns": "^3.6.0",
     "next": "14.2.5",
     "next-safe-action": "^7.7.1",
     "prisma": "^5.18.0",
