--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@twind/preset-tailwind": "^1.1.4",
     "date-fns": "^3.6.0",
     "next": "14.2.5",
-    "next-safe-action": "^7.7.1",
+    "next-auth": "^5.0.0-beta.20",
+    "next-safe-action": "^7.9.0",
     "prisma": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
